fixed button size on small screens

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3105,7 +3105,7 @@ input, select, textarea {
 				}
 
 				.inner .button{
-					min-width: 100px;
+					min-width: 200px;
 				}
 
 		}
